优化nacos构建脚本和Dockerfile